# shodo-static-gen

./: .gitignore  MANIFEST.in  Pipfile  README.md  build.py  build_settings.json  pyproject.toml  pytest.ini  serve.py  site_builder.py
.github/workflows/: python-package.yml
shodo_ssg/: __init__.py  api.py  assembler.py  asset_writer.py  cli.py  data_loader.py  front_matter_processor.py  html_root_layout_builder.py  pagination_handler.py  server.py  start_shodo_project.py  static_site_generator.py  template_context.py  template_handler.py
shodo_ssg/project_template/: build_settings.json  serve.py
shodo_ssg/project_template/src/markdown/articles/blog/: first-blog.md  fourth-blog.md  sixth-blog.md
shodo_ssg/project_template/src/markdown/articles/blog/subject/: second-blog.md
shodo_ssg/project_template/src/markdown/partials/homepage/: content.md
shodo_ssg/project_template/src/static/scripts/: main.js
shodo_ssg/project_template/src/store/: config.json
shodo_ssg/project_template/src/theme/markdown/articles/blog/: fifth-blog.md  first-blog.md  third-blog.md
shodo_ssg/project_template/src/theme/markdown/partials/collections/: another_short.md
shodo_ssg/project_template/src/theme/markdown/partials/homepage/: content.md
shodo_ssg/project_template/src/theme/views/: home.jinja
shodo_ssg/project_template/src/theme/views/articles/: layout.jinja
shodo_ssg/project_template/src/theme/views/articles/blog/subject/: layout.jinja
shodo_ssg/project_template/src/theme/views/pages/: linked_page.jinja
shodo_ssg/project_template/src/theme/views/pages/nested-route/: double-nested-route.jinja
shodo_ssg/project_template/src/views/: home.jinja
shodo_ssg/project_template/src/views/pages/: blog.jinja  collections.jinja  feed.jinja
shodo_ssg/project_template/src/views/partials/: footer.jinja
src/: config.json
src/store/: config.json
src/theme/markdown/: article.md
src/theme/markdown/articles/blog/: first-blog.md
src/theme/markdown/articles/blog/lifestyle/: second-blog.md
src/theme/markdown/articles/newsletter/: 5-23-2024.md
src/theme/markdown/partials/: another_excerpt.md  another_short.md  short.md
src/theme/markdown/partials/another_markdown_directory/yet_another_md_dir/: test2.md
src/theme/markdown/partials/collections/: another_short.md
src/theme/static/scripts/: main.js
src/theme/static/styles/: footer.css  header.css  main.css
src/theme/views/: home.jinja  layout.jinja
src/theme/views/articles/: layout.jinja
src/theme/views/articles/blog/lifestyle/: layout.jinja
src/theme/views/pages/: another_linked_page.jinja  blog.jinja  linked_page.jinja
src/theme/views/pages/nested-route/: double-nested-route.jinja
src/theme/views/pages/nested-route/double-nested-route/: triple-nested-route.jinja
static_site_builder/: __init__.py  asset_writer.py  data_loader.py  static_site_generator.py  template_handler.py
tests/: build_validation.py  conftest.py  test_api.py  test_assembler.py  test_asset_writer.py  test_cli.py  test_data_loader.py  test_front_matter_processor.py  test_html_root_layout_builder.py  test_pagination_handler.py  test_static_site_generator.py  test_template_context.py  test_template_handler.py
tests/project_template/: build_settings.json
tests/project_template/src/markdown/articles/blog/: third-blog.md
tests/project_template/src/static/scripts/: main.js
tests/project_template/src/store/: config.json  home.json  items.json
tests/project_template/src/theme/markdown/articles/blog/: first-blog.md  fourth-blog.md
tests/project_template/src/theme/markdown/articles/blog/subject/: second-blog.md
tests/project_template/src/theme/markdown/articles/newsletter/: monthly-update.md
tests/project_template/src/theme/views/: home.jinja
tests/project_template/src/theme/views/articles/: layout.jinja
tests/project_template/src/theme/views/pages/: blog.jinja
tests/project_template/src/theme/views/partials/: another_template.jinja
tests/project_template/src/views/: home.jinja
tests/project_template/src/views/articles/blog/subject/: layout.jinja
tests/project_template/src/views/articles/newsletter/: layout.jinja
tests/project_template/src/views/pages/: blog.jinja  feed.jinja  items.jinja
tests/project_template/src/views/pages/nested-route/double-nested-route/: triple-nested-route.jinja
