[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shodo_ssg"
version = "0.0.dev3"
description = "A Python-based static site generator for building sites from Markdown and JSON files"
authors = [{name = "Ryan Phillips", email = "ryanphillipssoftware@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["shodo", "static site generator", "ssg", "shodo static gen"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Jinja2>=3.1.3",
    "markdown2>=2.4.13",
    "markupsafe>=2.1.5",
]

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.urls]
homepage = "https://shodo.dev"
source = "https://github.com/ryanmphill/shodo-static-gen"
issues = "https://github.com/ryanmphill/shodo-static-gen/issues"
documentation = "https://shodo.dev/docs"

[project.scripts]
start-shodo-project = "shodo_ssg:start_shodo_project"
shodo = "shodo_ssg:cli"

[tool.setuptools.package-data]
shodo_ssg = ["project_template/**/*"]
